[package]
name = "unchecked-refcell"
description = "A drop-in alternative to RefCell for performance-critical code where it is certain no borrowing rules are violated."
repository = "https://github.com/mcmah309/unchecked-refcell"
version = "0.2.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.4"

[features]
default = []
debug_refcell = []
checked = ["debug_refcell"]

[[bench]]
name = "bench"
harness = false