[package]
name = "unchecked-refcell"
description = "A faster, drop-in replacement for RefCell in performance-critical code."
repository = "https://github.com/mcmah309/unchecked-refcell"
version = "0.2.2"
license = "Apache-2.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.4"

[features]
default = []
debug_refcell = []
checked = ["debug_refcell"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]